Added a search bar

--- a/phoinexfitness/src/App.css
+++ b/phoinexfitness/src/App.css
@@ -25,3 +25,15 @@
     transform: rotate(360deg);
   }
 }
+
+.search-bar-container {
+  display: flex;
+  width: 100vw;
+  height: 60vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar {
+  width: 70%;
+}
